# Autonomous_Parking_ROS

./: README.md  README.txt
ara_star_planner/: CMakeLists.txt  package.xml
ara_star_planner/include/ara_star_planner/: bintree.h  planner.h
ara_star_planner/launch/: planner.launch
ara_star_planner/src/: planner.cpp  planner.cpp.backup  planner_node.cpp
ara_star_planner/srv/: SetGoal.srv
car_description/: CMakeLists.txt  package.xml
car_description/launch/: final_project.launch  gazebo_world.launch  simple_world.launch
car_description/map/: global_settings.yaml  map.yaml  motion_primitive.yaml
car_description/meshes/car/: 17755_Audi_R8.3ds  base_a.002.dae  base_b.002.dae  base_c.002.dae  body_a.002.dae  body_b.002.dae  body_c.002.dae  body_d.002.dae  body_e.002.dae  brake1.000.dae  brake1.001.dae  brake1.004.dae  brake1.005.dae  brakelig04.002.dae  brakelig07.002.dae  brakelig11.002.dae  brakelight.002.dae  bumpe.002.dae  bumpe1.002.dae  bumpe2.002.dae  bumpe3.002.dae  bumpe4.002.dae  bumpe5.002.dae  bumpe6.002.dae  bumper_fro.002.dae  bumper_r01.002.dae  bumper_r02.002.dae  bumper_r03.002.dae  bumper_r04.002.dae  chassis.dae  door_.002.dae  door_1.002.dae  door_2.002.dae  door_3.002.dae  door_left_.002.dae  door_right.002.dae  exhaust_a.002.dae  exhaust_b.002.dae  fende.002.dae  fende1.002.dae  (+37 more)
car_description/urdf/: audibot.urdf.xacro  audibot_obs.urdf.xacro  robot1_base_01.xacro
car_description/urdf/world/: sample.world
dynamic_obstacle_planner/: CMakeLists.txt  package.xml
dynamic_obstacle_planner/launch/: dynamic_obstacle.launch
dynamic_obstacle_planner/nodes/: obstacle.planner
gazebo_interface/: CMakeLists.txt  package.xml
gazebo_interface/action/: execute.action
gazebo_interface/launch/: gazebo_interface.launch
gazebo_interface/msg/: DyObsUpdate.msg  Environment.msg  Motion.msg
gazebo_interface/nodes/: gazebo_interface_UT.py
gazebo_interface/src/: gazebo_interface.cpp  gazebo_interface.cpp.backup  gazebo_interface.cpp.backup2
map_generator/: download_map.sh  map.generator  test.map
