<?xml version="1.0"?>
<package>
  <name>ara_star_planner</name>
  <version>0.0.0</version>
  <description>The ara_star_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag --> 
  <maintainer email="nicewell@andrew.cmu.edu">nicewell</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_interface</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>gazebo_interface</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_generation</run_depend>

</package>
