<?xml version="1.0"?>
<package format="2">
  <name>dynamic_obstacle_planner</name>
  <version>1.0.0</version>
  <description>The dynamic_obstacle_planner package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <maintainer email="boshit@andrew.cmu.edu">boooooosh</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>gazebo_interface</build_depend>

  <build_export_depend>gazebo_interface</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>gazebo_interface</exec_depend>

</package>
